--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body  {
 	text-align: left;
 	
 }
-.lgp #wrapper { 
+.lgp main { 
 	width: 960px;  
 	background-image:url(images/header-bg.png);
 	background-repeat:repeat-x;
@@ -26,14 +26,14 @@ body  {
 	border: 1px solid #000000;
 	text-align: left; 
 } 
-.lgp #header { 
+.lgp header { 
 	height:120px;
 	float:left;
 	width:100%;
 	margin-bottom:40px;
 	
 } 
-.lgp #header h1 {
+.lgp header h1 {
 	margin: 0; 
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -44,56 +44,56 @@ body  {
 	padding-left: 0;
 	
 }
-#sidebar1 a {
+nav a {
 color:#000;
 }
-#sidebar1 a:hover {
+nav  a:hover {
 text-decoration:underline;
 font-size:14px;
 }
-.lgp #sidebar1 {
+.lgp nav  {
 	float: left; 
 	width: 200px; 
 	padding: 15px 10px 15px 20px;
 }
-.lgp #sidebar1 ul  {
+.lgp nav  ul  {
 	margin: 0px;
 	padding-left: 20px;
 	line-height: 150%;
 }
-.lgp #sidebar1 ul  li {
+.lgp nav  ul  li {
 margin:10px 0;
 }
-.lgp #sidebar1 ul  li a {
+.lgp nav  ul  li a {
 	color:#000;
 	font-size:13px;
 	text-decoration:none;
 }
-.lgp #sidebar1 ul  li a:hover {
+.lgp nav ul  li a:hover {
 	color:#000;
 	/* font-size:14px; */
 	text-decoration:underline;
 }
-.lgp #mainContent { 
+.lgp section { 
 	width:680px;
 	padding: 0 20px; 
 	float:right;
 } 
-.lgp #footer { 
+.lgp footer { 
 	padding: 0 10px 0 20px; 
 	background:#DDDDDD; 
 	
 	height:90px;
 } 
-.lgp #footer p {
+.lgp footer p {
 	margin: 0; 
 	padding: 10px 0; 
 }
-.lgp #footer a {
+.lgp footer a {
 color:black;
 text-decoration:none;
 }
-.lgp #footer a :hover {
+.lgp footer a :hover {
 color:black;
 text-decoration:underline;
 }
@@ -112,7 +112,7 @@ text-decoration:underline;
     font-size: 1px;
     line-height: 0px;
 }
-.lgp #wrapper #header img {
+.lgp #wrapper header img {
 	margin: 10px;
 }
 .logo {
